--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
 
-*{
-    margin: 0;
-    padding: 0;
-    
+
+html,body{
+    overflow-x: hidden;
+    overflow-y: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
 }
 nav{
     background-color: black;
@@ -14,7 +18,7 @@ nav{
     justify-content: center;
     align-items: center;
     z-index: 1;
-    box-shadow: 0 0 5px grey;
+    box-shadow: 0 0 5px black;
 }
 .nav-box{
     background: transparent;
@@ -51,10 +55,10 @@ nav{
     
 }
 .hero{
-    width: 100%;
     display: flex;
     flex-direction: column;
-    height:89vh;
+    height:85vh;
+    color: white;
     justify-content: center;
     align-items: center;
     font-family: 'Josefin Sans', sans-serif;
@@ -68,7 +72,10 @@ nav{
 }
 footer{
     margin-top: auto;
+    margin-bottom: 0;
+    padding: 0;
     display: flex;
+    color: white;
     justify-content: center;
     font-family: 'Josefin Sans', sans-serif;
     font-weight: bolder;
