--- a/blog.css
+++ b/blog.css
@@ -1,90 +1,92 @@
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
-
-
-html,body{
-    overflow-x: hidden;
-    overflow-y: hidden;
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    background-color: #23153c;
+html,
+body {
+  overflow-x: hidden;
+  overflow-y: hidden;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  background-color: #23153c;
 }
-nav{
-    background-color: black;
-    height: 60px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1;
-    box-shadow: 0 0 5px black;
+nav {
+  background-color: black;
+  height: 60px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  box-shadow: 0 0 5px black;
 }
-.nav-box{
-    background: transparent;
-    height: 60px;
-    width: 75%;
-    display: flex;
-    justify-content: space-between;
-    align-items:  center;
+.nav-box {
+  background: transparent;
+  height: 60px;
+  width: 75%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.nav-box span{
-    color: white;
-    font-weight: bold;
-    font-size: 30px;
-    font-family: 'Josefin Sans', sans-serif;
+.nav-box span {
+  color: white;
+  font-weight: bold;
+  font-size: 30px;
+  font-family: "Josefin Sans", sans-serif;
 }
-.nav-box ul{
-    
-    display: flex;
-    width: 18vh;
-    justify-content: space-around;
-    align-items: center;
-    list-style: none;
-    font-family: 'Josefin Sans', sans-serif;
+.nav-box ul {
+  display: flex;
+  width: 18vh;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
+  font-family: "Josefin Sans", sans-serif;
 }
-.nav-box ul li a{
-    text-decoration: none;
-    font-weight: bold;
-    color: white;
+.nav-box ul li a {
+  text-decoration: none;
+  font-weight: bold;
+  color: white;
 }
 
-.nav-box ul li a:hover{
-    color: blue;
-    animation: 3s ease-in-out;
-    
+.nav-box ul li a:hover {
+  color: blue;
+  animation: 3s ease-in-out;
 }
-.hero{
-    display: flex;
-    flex-direction: column;
-    height:85vh;
-    color: white;
-    margin-top: 2rem;
-    font-size: larger;
-    align-items: center;
-    font-family: 'Josefin Sans', sans-serif;
-    
+.hero {
+  display: flex;
+  flex-direction: column;
+  height: 85vh;
+  color: white;
+  margin-top: 2rem;
+  font-size: larger;
+  align-items: center;
+  font-family: "Josefin Sans", sans-serif;
 }
-.box{
-    margin-top: 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 55%;
-    padding: 1rem;
-    border: 1px white;
-    border-color: blanchedalmond;
-    border-style: solid;
-    border-radius: 20px;
-    transition: all .2s ease-in-out;
+.box {
+  background: rgba(255, 255, 255, 0.13);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(2.7px);
+  -webkit-backdrop-filter: blur(2.7px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 55%;
+  padding: 1rem;
+  border: 1px white;
+  border-color: blanchedalmond;
+  border-style: solid;
+  border-radius: 20px;
+  transition: all 0.2s ease-in-out;
 }
-.box:hover{
-    transform: scale(1.005);
+.box:hover {
+  transform: scale(1.005);
 }
-.icons{
-    display: flex;
-    width: 55%;
-    justify-content:space-between;
-    align-items: center;
+.icons {
+  display: flex;
+  width: 55%;
+  justify-content: space-between;
+  align-items: center;
 }
